Import of HATA/Mail-ISO2022JP-0.06 from CPAN.
gitpan-cpan-distribution: Mail-ISO2022JP
gitpan-cpan-version:      0.06
gitpan-cpan-path:         HATA/Mail-ISO2022JP-0.06.tar.gz
gitpan-cpan-author:       HATA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,7 +1,13 @@
-Mail/ISO2022JP version 0.05
+Mail/ISO2022JP version 0.06 (Final)
 ===========================
 
  This module composes a ISO-2022-JP encoded email.
+
+**DEPRECATED**
+
+ This module has moved to the namespace of Lingua::JA::Mail.
+ So this module will be no more maintenanced.
+ Please see its successor Lingua::JA::Mail.
 
 INSTALLATION
 
